--- a/css/agency.css
+++ b/css/agency.css
@@ -39,6 +39,11 @@ section {
     text-transform: none;
     font-family: 'Droid Serif', 'Helvetica Neue', Helvetica, Arial, sans-serif; }
 
+p {
+    border: 2px solid red;
+    border-radius: 5px;
+}
+
 @media (min-width: 768px) {
   section {
     padding: 150px 0; } }
