--- a/css/agency.css
+++ b/css/agency.css
@@ -226,7 +226,7 @@ fieldset[disabled] .btn-xl.active {
   }
 }
 header {
-  background-image: url("icandy.jpg");
+  background-image: url("main.jpg");
   background-repeat: no-repeat;
   background-attachment: scroll;
   background-position: center center;
