--- a/in.css
+++ b/in.css
@@ -26,7 +26,7 @@ html {
 }
 
 body {
-  background-image: url("main.jpg");
+  background-image: url("haters.jpg");
   background-repeat: no-repeat;
   font-family: Montserrat,'Helvetica Neue',Helvetica,Arial,sans-serif;
 }
