--- a/in.css
+++ b/in.css
@@ -39,7 +39,7 @@ body {
 }
 a {
   text-decoration:none;
-  color:black;
+  color:white;
   transition:.5s ease;
   &:hover {
     color:$main-dark;
