--- a/in.css
+++ b/in.css
@@ -202,8 +202,9 @@ textarea {
 
 .button-block {
   display:block;
-  width:auto;
+  width:50%;
   border-radius: 8px;
+  margin: auto;
 }
 
 .forgot {
