--- a/in.css
+++ b/in.css
@@ -144,8 +144,7 @@ input, textarea {
   width:100%;
   height:100%;
   padding:5px 10px;
-  background-image:none;
-  border:1px solid $gray-light;
+  background-color: rgba(255,255,255,0.5);
   color:$white;
   border-radius:0;
   transition:border-color .25s ease, box-shadow .25s ease;
