--- a/in.css
+++ b/in.css
@@ -144,10 +144,10 @@ input, textarea {
   width:100%;
   height:100%;
   padding:5px 10px;
-  background-color: rgba(255,255,255,0);
+  background-color: rgba(255,255,255,0.5);
   color:$white;
   border-radius:0;
-  border-style: none;
+  border-color: rgba(255,255,255,0);
   transition:border-color .25s ease, box-shadow .25s ease;
   &:focus {
 		outline:0;
