--- a/in.css
+++ b/in.css
@@ -147,7 +147,7 @@ input, textarea {
   background-color: rgba(255,255,255,0.5);
   color:$white;
   border-radius:0;
-  border-color: rgba(255,255,255,0);
+  border-style: none;
   transition:border-color .25s ease, box-shadow .25s ease;
   &:focus {
 		outline:0;
@@ -156,7 +156,7 @@ input, textarea {
 }
 
 textarea {
-  border:2px solid $gray-light;
+  border-color: rgba(225, 255, 255, 0);
   resize: vertical;
 }
 
