--- a/in.css
+++ b/in.css
@@ -213,7 +213,7 @@ textarea {
   text-align:right;
 }
 
-.icon-circle .fa{
+/* .icon-circle .fa{
     font-size           : 25px;
     color               : #e84700;
     margin              : 0 460px;
@@ -347,4 +347,4 @@ textarea {
 
 }
 
-
+ */
