--- a/in.css
+++ b/in.css
@@ -213,7 +213,7 @@ textarea {
   text-align:right;
 }
 
-/* .icon-circle .fa{
+.icon-circle .fa{
     font-size           : 25px;
     color               : #e84700;
     margin              : 0 460px;
@@ -346,5 +346,3 @@ textarea {
     border                  : 1px solid #007bb7;
 
 }
-
- */
