--- a/in.css
+++ b/in.css
@@ -56,6 +56,7 @@ a {
   background-color: #FFF176;
   color:#000000;
   font-size: 120%;
+  border: solid 3px black;
 }
 
 .form {
@@ -70,7 +71,7 @@ a {
 .tab-group {
   list-style:none;
   padding:0;
-  margin:20px;
+  margin:0px auto;
   &:after {
     content: "";
     display: table;
