--- a/in.css
+++ b/in.css
@@ -56,7 +56,7 @@ a {
   background-color: #FFF176;
   color:#000000;
   font-size: 120%;
-  border: solid 3px black;
+  border: solid 3px gray;
 }
 
 .form {
@@ -299,6 +299,7 @@ textarea {
 .ifacebook .fa{
     color               :#3B5998;
     border              :2px solid #3B5998;
+    background-color: rgba(255, 255, 255, 0.3);
 }
 
 .ifacebook .fa:hover{
@@ -312,6 +313,7 @@ textarea {
 .itwittter .fa{
     color               : #33ccff;
     border              :2px solid #33ccff;
+    background-color: rgba(255, 255, 255, 0.3);
 }
 
 .itwittter .fa:hover{
@@ -325,6 +327,7 @@ textarea {
 .igoogle .fa{
     color               : #BD3518;
     border              :2px solid #BD3518;
+    background-color: rgba(255, 255, 255, 0.3);
 }
 
 .igoogle .fa:hover{
@@ -338,6 +341,7 @@ textarea {
 .iLinkedin .fa{
     color               : #007bb7;
     border              :2px solid #007bb7;
+    background-color: rgba(255, 255, 255, 0.3);
 }
 
 .iLinkedin .fa:hover{
